--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,7 +7,7 @@
     فرم نظرسنجی دیبا درمان کاویان
   </title>
   <link href="./style.css" rel="stylesheet">
-  <script src="./main.js"></script>
+  <script src="./main.js" defer></script>
 </head>
 
 <body>
