--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>
     فرم نظرسنجی دیبا درمان کاویان
   </title>
-  <link href="./public/style.css" rel="stylesheet">
-  <script src="./public/main.js" defer></script>
+  <link href="/style.css" rel="stylesheet">
+  <script src="/main.js" defer></script>
 </head>
 
 <body>
